Change 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
      <div class="flex gap-3"><button id="cancel-delete" class="flex-1 py-3 border border-gray-200 rounded-xl font-medium text-gray-600 hover:bg-gray-50 transition"> Batal </button> <button id="confirm-delete" class="flex-1 py-3 bg-red-500 text-white rounded-xl font-medium hover:bg-red-600 transition"> Hapus </button>
      </div>
     </div>
-   </div><!-- Main Layout -->
+   </div>
+   <!-- Main Layout -->
    <div class="flex h-full"><!-- Sidebar (Admin) -->
     <aside id="admin-sidebar" class="fixed lg:relative h-full bg-white shadow-xl z-40 sidebar-transition -translate-x-full lg:translate-x-0 hidden" style="width: 280px;">
      <div class="flex flex-col h-full"><!-- Sidebar Header -->
@@ -1377,4 +1378,5 @@
     init();
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c85d3e5c5d1919f',t:'MTc3MDE2MjU5Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+
 </html>
